# gridworld

./: .babelrc  .eslintrc.errorhandling.js  .eslintrc.js  .gitignore  ARCHITECTURE.md  AUTO-BUILD-README.md  CIRCULAR_DEPS_FIXED.md  Cargo.toml  Gruntfile.js  LICENSE  README.md  SERVICE_COUPLING_REFACTOR.md  TEST_BOILERPLATE.md  TYPESCRIPT_MIGRATION.md  TYPESCRIPT_MIGRATION_COMPLETE.md  add_people.js  analysis_report.md  check_adults.js  check_ages.js  check_calendar.js  check_eligibility.js  check_family_stats.js  check_tiles_table.js  create_families.js  create_test_data.js  data.json  debug_eligible.js  debug_pop_count.js  debug_save.js  debug_villages.js  fix_population.js  index.html  index.html.backup  jest-results.json  jsconfig.json  nodemon.json  package-lock.json  package.json  quick_check.js  response.json  (+14 more)
.claude/: settings.local.json
css/: background.css  styles.css  styles.css.backup
js/: browserify.js  data.js  hexaSphereGlobal.js  hexasphere.js  init.js  input-handler.js  main.js  scene.js  tile-selector.js
scripts/: assign_residency.js  auto-fix-ts.ts  backfill_village_capacity.js  checkPeople.ts  checkStorage.ts  check_bad_tiles.ts  check_db_only.js  check_db_only.ts  check_db_state.js  check_db_state.ts  check_eligible_sets.ts  check_fk.js  check_habitable_tiles.ts  check_lands.js  check_lands.ts  check_pending.js  check_pending.ts  check_postgres_integrity.js  check_redis_direct.js  check_redis_direct.ts  check_redis_state.js  check_redis_state_simple.ts  check_schema.js  check_tile.js  check_tile_db.ts  cleanup_bad_villages.ts  clear_population.ts  computeFamilyStats.js  computeFamilyStats.ts  debug_save_flow.js  debug_save_flow.ts  find_dupes_in_tile.js  find_dupes_in_tile.ts  fix-ts-imports.ts  fullSyncStorage.js  fullSyncStorage.ts  get_people_count.js  get_people_count.ts  get_residency_stats.js  get_village_food_stats.js  (+43 more)
server/: index.js  index.ts  jestGlobalTeardown.js  jestGlobalTeardown.ts
shared/: hexasphereConfig.ts
simulation/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
simulation/src/: calendar_runner.rs  components.rs  lib.rs  main.rs  names.rs  napi_bindings.rs  persistence.rs  storage.rs  systems.rs  world.rs
simulation/src/systems/: aging.rs  birth.rs  death.rs  family.rs  matchmaking.rs
src/: BackgroundStars.js  browserify.js  camera-controller.js  hexasphere.js  index.js  index.ts  init.js  main.js  population-manager.js  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: calendar.rs  config.rs  memory.rs  mod.rs  people.rs  population.rs  statistics.rs  tiles.rs  world.rs
(+341 files in other folders)
