[package]
name = "gridworld-simulation"
version = "0.1.0"
edition = "2021"
description = "High-performance population simulation engine for GridWorld"

[lib]
name = "simulation"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# N-API for Node.js bindings
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"

# ECS
hecs = "0.10"

# Parallelism
rayon = "1.8"

# Random/probability
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Memory stats
memory-stats = "1.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1  # Slightly optimize even in dev for simulation performance
