[package]
name = "gridworld-simulation"
version = "0.1.0"
edition = "2021"
description = "High-performance population simulation engine for GridWorld"

[lib]
name = "simulation"
path = "src/lib.rs"

[dependencies]
# ECS
hecs = "0.10"

# Parallelism
rayon = "1.8"

# Random/probability
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Memory stats
memory-stats = "1.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Lazy static initialization
once_cell = "1.19"
