[package]
name = "gridworld-simulation"
version = "0.1.0"
edition = "2021"
description = "High-performance population simulation engine for GridWorld"

[lib]
name = "simulation"
path = "src/lib.rs"

[dependencies]
# ECS
hecs = "0.10"

# Random/probability
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
