[package]
name = "gridworld-tauri"
version = "0.1.0"
edition = "2021"
description = "GridWorld desktop application"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gridworld-simulation = { path = "../simulation" }
hecs = "0.10"
rand = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
